# stock_bot

./: :  main.py  pyproject.toml
src/: main.py  setting.py
src/tools/: ai.py  bot.py  fetch_yfinance.py  finhub_api.py  system_prompt.py  test_bot.py
